# garou

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  demo.sh
docs/: stream-layout.md
examples/: basic_usage.rs
schemas/: chat.fbs
src/: client.rs  error.rs  lib.rs  main.rs  server.rs  simple_test.rs
src/protocol/: codec.rs  frame.rs  messages.rs  mod.rs
src/server/: connection_handler.rs  mod.rs  multi_stream_server.rs  room_manager.rs
src/transport/: connection.rs  mod.rs  shards.rs  streams.rs
