[package]
name = "garou"
version = "0.1.0"
edition = "2024"

[dependencies]
quinn = "0.11"
rustls = "0.23"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.10", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rcgen = "0.12"
